--- a/sampleapp/build.gradle
+++ b/sampleapp/build.gradle
@@ -20,6 +20,10 @@ android {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
+
+    lintOptions {
+        disable 'InvalidPackage'
+    }
 }
 
 dependencies {
