--- a/sampleapp/build.gradle
+++ b/sampleapp/build.gradle
@@ -28,5 +28,7 @@ android {
 
 dependencies {
     implementation 'org.osmdroid:osmdroid-android:5.6.5'
-    implementation project(':library')
+
+    implementation 'de.westnordost:countryboundaries:1.2'
+    //implementation project(':library')
 }
