--- a/generator/build.gradle
+++ b/generator/build.gradle
@@ -1,30 +1,34 @@
-apply plugin: 'java'
-apply plugin: 'application'
+plugins {
+    id "java"
+    id "application"
+}
 
-mainClassName = 'de.westnordost.countryboundaries.Main'
+mainClassName = "de.westnordost.countryboundaries.Main"
 
 task fatJar(type: Jar) {
     manifest {
-        attributes 'Main-Class': "$mainClassName"
+        attributes "Main-Class": "$mainClassName"
     }
-    baseName = project.name + '-all'
+    baseName = project.name + "-all"
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
 
 run {
-    args = ['boundaries.osm','180','180']
+    args = ["boundaries.osm","180","180"]
 }
 
 dependencies {
-    implementation 'net.sf.kxml:kxml2:2.3.0'
-    implementation 'org.json:json:20180813'
-    implementation 'com.vividsolutions:jts-core:1.14.0'
+    implementation "net.sf.kxml:kxml2:2.3.0"
+    implementation "org.json:json:20180813"
+    implementation "com.vividsolutions:jts-core:1.14.0"
 
-    implementation project(':library')
+    implementation project(":library")
 
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation "junit:junit:4.13.2"
 }
 
-sourceCompatibility = "1.8"
-targetCompatibility = "1.8"
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
