--- a/sampleapp/src/main/AndroidManifest.xml
+++ b/sampleapp/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
 
     <application
         android:label="Country Boundaries">
-        <activity android:name="de.westnordost.countryboundaries.app.MainActivity">
+        <activity android:name="de.westnordost.countryboundaries.app.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
