--- a/sampleapp/build.gradle
+++ b/sampleapp/build.gradle
@@ -30,6 +30,6 @@ android {
 
 dependencies {
     implementation "org.osmdroid:osmdroid-android:6.1.10"
-    implementation "de.westnordost:countryboundaries:1.6"
-    //implementation project(":library")
+    //implementation "de.westnordost:countryboundaries:1.6"
+    implementation project(":library")
 }
