upgrade gradle to 8.13, thanks @karussell

--- a/generator/build.gradle
+++ b/generator/build.gradle
@@ -9,8 +9,8 @@ tasks.register('fatJar', Jar) {
     manifest {
         attributes "Main-Class": "$mainClassName"
     }
-    baseName = project.name + "-all"
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    archiveBaseName.set("${project.name}-all")
+    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
 
