Fix generator fatJar build issue
Error was: 'Entry META-INF/versions/9/module-info.class is a duplicate but no duplicate handling strategy has been set.'

--- a/generator/build.gradle
+++ b/generator/build.gradle
@@ -11,6 +11,7 @@ tasks.register('fatJar', Jar) {
     }
     archiveBaseName.set("${project.name}-all")
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     with jar
 }
 
